--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,9 @@
-
 <%- include("partials/header")%>
+   
     <div class="home-hero">
-        <h1>Whats Happening?</h1>
-        <h4>New to Warbler?</h4>
-        <a href="/api/auth/signup"><button class="btn btn-primary">SignUp</button></a>
+        <h1 style="color:aliceblue">Whats Happening?</h1>
+        <h4  style="color:aliceblue">New to Warbler?</h4>
+        <br>
+        <a href="/api/auth/signup"><button class="btn btn-primary">Sign Up Here</button></a>
     </div>
-    <%- include("partials/footer")%>
+<%- include("partials/footer")%>
