--- a/views/partials/logoutHeader.ejs
+++ b/views/partials/logoutHeader.ejs
@@ -21,7 +21,7 @@
             <a href="/api/auth/signup">Sign up</a>    
         </li>
         <li>
-            <a href="/api/auth/login">Login</a>
+            <a href="/api/auth/logout">Logout</a>
         </li>
     </ul>
     </div>
