New Message page added

--- a/views/partials/logoutHeader.ejs
+++ b/views/partials/logoutHeader.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link  rel="stylesheet" href="StyleSheets/index.css"/>
+    <link  rel="stylesheet" href="../../public/StyleSheets/index.css"/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,14 +16,7 @@
         </a>
         </div>
        
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            <a href="/api/auth/signup">Sign up</a>    
-        </li>
-        <li>
-            <a href="/api/auth/logout">Logout</a>
-        </li>
-    </ul>
+  
     </div>
 </nav>
 <body>
