--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -1,6 +1,15 @@
 <%-include("partials/logoutHeader")%>
-
+<ul class="nav navbar-nav navbar-right" style="margin-left: 93%;">
+    <li>
+        <a href="/api/auth/logout">Logout</a>
+    </li>
+    <li>
+        <a href="/api/users/<%=sessionID%>/messages">New Message</a>    
+    </li>
+</ul>
 <h1>
     Welcome <%=username%>
+    <br>
+    <a href="/api/messages"><button class="btn btn-success">All Messages</button></a>
 </h1>
 <%- include("partials/footer")%> 
