Delete route has been added

--- a/views/partials/logoutHeader.ejs
+++ b/views/partials/logoutHeader.ejs
@@ -15,8 +15,12 @@
         <img class="logo" alt="Warbler image" />
         </a>
         </div>
-       
-  
+        <ul class="nav navbar-nav navbar-right" style="margin-left: 93%;">
+            <li>
+                <a href="/api/auth/logout">Logout</a>
+            </li>
+           
+        </ul>
     </div>
 </nav>
 <body>
